--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,11 +48,11 @@
       - section09
 
 
-# - name: Execute the section 17 tasks
-#   import_tasks: section17.yml
-#   when: section17_patch | bool
-#   tags:
-#       - section17
+- name: Execute the section 17 tasks
+  import_tasks: section17.yml
+  when: section17_patch | bool
+  tags:
+      - section17
 
 # - name: Execute the section 18 tasks
 #   import_tasks: section18.yml
