--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -782,18 +782,18 @@
     - rule_18.5.20.2
     - patch
 
-# - name: "SCORED | 18.5.21.1 | PATCH | L1 Ensure Minimize the number of simultaneous connections to the Internet or a Windows Domain is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Wcmsvc\Grouppolicy
-#     name: fMinimizeConnections
-#     data: 1
-#     type: dword
-#   when: rule_18_5_21_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.5.21.1
-#     - patch
+- name: "SCORED | 18.5.21.1 | PATCH | L1 Ensure Minimize the number of simultaneous connections to the Internet or a Windows Domain is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Wcmsvc\Grouppolicy
+    name: fMinimizeConnections
+    data: 1
+    type: dword
+  when: rule_18_5_21_1
+  tags:
+    - level1
+    - level2
+    - rule_18.5.21.1
+    - patch
 
 # - name: "SCORED | 18.5.21.2 | PATCH | L2 Ensure Prohibit connection to non-domain networks when connected to domain authenticated network is set to Enabled MS only"
 #   win_regedit:
