--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -1691,172 +1691,172 @@
     - rule_18.9.16.4
     - patch
 
-# - name: "SCORED | 18.9.26.1.1 | PATCH | L1 Ensure Application Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\EventLog\Application
-#     name: Retention
-#     data: 0
-#     type: dword
-#   when: rule_18_9_26_1_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.1.1
-#     - patch
+- name: "SCORED | 18.9.26.1.1 | PATCH | L1 Ensure Application Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\EventLog\Application
+    name: Retention
+    data: 0
+    type: dword
+  when: rule_18_9_26_1_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.1.1
+    - patch
 
-# - name: "SCORED | 18.9.26.1.2 | PATCH | L1 Ensure Application Specify the maximum log file size KB is set to Enabled 32768 or greater"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Application
-#     name: MaxSize
-#     data: 65538
-#     type: dword
-#   when: rule_18_9_26_1_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.1.2
-#     - patch
+- name: "SCORED | 18.9.26.1.2 | PATCH | L1 Ensure Application Specify the maximum log file size KB is set to Enabled 32768 or greater"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Application
+    name: MaxSize
+    data: 65538
+    type: dword
+  when: rule_18_9_26_1_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.1.2
+    - patch
 
-# - name: "SCORED | 18.9.26.2.1 | PATCH | L1 Ensure Security Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Security
-#     name: Retention
-#     data: 0
-#     type: string
-#   when: rule_18_9_26_2_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.2.1
-#     - patch
+- name: "SCORED | 18.9.26.2.1 | PATCH | L1 Ensure Security Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Security
+    name: Retention
+    data: 0
+    type: string
+  when: rule_18_9_26_2_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.2.1
+    - patch
 
-# - name: "SCORED | 18.9.26.2.2 | PATCH | L1 Ensure Security Specify the maximum log file size KB is set to Enabled 196608 or greater"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Security
-#     name: MaxSize
-#     data: 196608
-#     type: dword
-#   when: rule_18_9_26_2_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.2.2
-#     - patch
+- name: "SCORED | 18.9.26.2.2 | PATCH | L1 Ensure Security Specify the maximum log file size KB is set to Enabled 196608 or greater"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Security
+    name: MaxSize
+    data: 196608
+    type: dword
+  when: rule_18_9_26_2_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.2.2
+    - patch
 
-# - name: "SCORED | 18.9.26.3.1 | PATCH | L1 Ensure Setup Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Application
-#     name: Retention
-#     data: 0
-#     type: string
-#   when: rule_18_9_26_3_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.3.1
-#     - patch
+- name: "SCORED | 18.9.26.3.1 | PATCH | L1 Ensure Setup Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Application
+    name: Retention
+    data: 0
+    type: string
+  when: rule_18_9_26_3_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.3.1
+    - patch
 
-# - name: "SCORED | 18.9.26.3.2 | PATCH | L1 Ensure Setup Specify the maximum log file size KB is set to Enabled 32768 or greater"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Setup
-#     name: MaxSize
-#     data: 32768
-#     type: dword
-#   when: rule_18_9_26_3_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.3.2
-#     - patch
+- name: "SCORED | 18.9.26.3.2 | PATCH | L1 Ensure Setup Specify the maximum log file size KB is set to Enabled 32768 or greater"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Setup
+    name: MaxSize
+    data: 32768
+    type: dword
+  when: rule_18_9_26_3_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.3.2
+    - patch
 
-# - name: "SCORED | 18.9.26.4.1 | PATCH | L1 Ensure System Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\System
-#     name: Retention
-#     data: 0
-#     type: string
-#   when: rule_18_9_26_4_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.4.1
-#     - patch
+- name: "SCORED | 18.9.26.4.1 | PATCH | L1 Ensure System Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\System
+    name: Retention
+    data: 0
+    type: string
+  when: rule_18_9_26_4_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.4.1
+    - patch
 
-# - name: "SCORED | 18.9.26.4.2 | PATCH | L1 Ensure System Specify the maximum log file size KB is set to Enabled 32768 or greater"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\System
-#     name: MaxSize
-#     data: 65538
-#     type: dword
-#   when: rule_18_9_26_4_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.26.4.2
-#     - patch
+- name: "SCORED | 18.9.26.4.2 | PATCH | L1 Ensure System Specify the maximum log file size KB is set to Enabled 32768 or greater"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\System
+    name: MaxSize
+    data: 65538
+    type: dword
+  when: rule_18_9_26_4_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.26.4.2
+    - patch
 
-# - name: "SCORED | 18.9.30.2 | PATCH | L1 Ensure Turn off Data Execution Prevention for Explorer is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Explorer
-#     name: NoDataExecutionPrevention
-#     data: 0
-#     type: dword
-#   when: rule_18_9_30_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.30.2
-#     - patch
+- name: "SCORED | 18.9.30.2 | PATCH | L1 Ensure Turn off Data Execution Prevention for Explorer is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Explorer
+    name: NoDataExecutionPrevention
+    data: 0
+    type: dword
+  when: rule_18_9_30_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.30.2
+    - patch
 
-# - name: "SCORED | 18.9.30.3 | PATCH | L1 Ensure Turn off heap termination on corruption is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Explorer
-#     name: NoHeapTerminationOnCorruption
-#     data: 0
-#     type: dword
-#   when: rule_18_9_30_3
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.30.3
-#     - patch
+- name: "SCORED | 18.9.30.3 | PATCH | L1 Ensure Turn off heap termination on corruption is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Explorer
+    name: NoHeapTerminationOnCorruption
+    data: 0
+    type: dword
+  when: rule_18_9_30_3
+  tags:
+    - level1
+    - level2
+    - rule_18.9.30.3
+    - patch
 
-# - name: "SCORED | 18.9.30.4 | PATCH | L1 Ensure Turn off shell protocol protected mode is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Microsoft\Windows\Currentversion\Policies\Explorer
-#     name: PreXPSP2ShellProtocolBehavior
-#     data: 0
-#     type: dword
-#   when: rule_18_9_30_4
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.30.4
-#     - patch
+- name: "SCORED | 18.9.30.4 | PATCH | L1 Ensure Turn off shell protocol protected mode is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Microsoft\Windows\Currentversion\Policies\Explorer
+    name: PreXPSP2ShellProtocolBehavior
+    data: 0
+    type: dword
+  when: rule_18_9_30_4
+  tags:
+    - level1
+    - level2
+    - rule_18.9.30.4
+    - patch
 
-# - name: "SCORED | 18.9.39.2 | PATCH | L2 Ensure Turn off location is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Locationandsensors
-#     name: DisableLocation
-#     data: 1
-#     type: dword
-#   when: rule_18_9_39_2
-#   tags:
-#     - level2
-#     - rule_18.9.39.2
-#     - patch
+- name: "SCORED | 18.9.39.2 | PATCH | L2 Ensure Turn off location is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Locationandsensors
+    name: DisableLocation
+    data: 1
+    type: dword
+  when: rule_18_9_39_2
+  tags:
+    - level2
+    - rule_18.9.39.2
+    - patch
 
-# - name: "SCORED | 18.9.43.1 | PATCH | L2 Ensure Allow Message Service Cloud Sync is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Messaging
-#     name: AllowMessageSync
-#     data: 0
-#     type: dword
-#   when: rule_18_9_43_1
-#   tags:
-#     - level2
-#     - rule_18.9.43.1
-#     - patch
+- name: "SCORED | 18.9.43.1 | PATCH | L2 Ensure Allow Message Service Cloud Sync is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Messaging
+    name: AllowMessageSync
+    data: 0
+    type: dword
+  when: rule_18_9_43_1
+  tags:
+    - level2
+    - rule_18.9.43.1
+    - patch
 
 # - name: "SCORED | 18.9.44.1 | PATCH | L1 Ensure Block all consumer Microsoft account user authentication is set to Enabled"
 #   win_regedit:
