--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -1858,220 +1858,220 @@
     - rule_18.9.43.1
     - patch
 
-# - name: "SCORED | 18.9.44.1 | PATCH | L1 Ensure Block all consumer Microsoft account user authentication is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\MicrosoftAccount
-#     name: DisableUserAuth
-#     data: 1
-#     type: dword
-#   when: rule_18_9_44_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.44.1
-#     - patch
+- name: "SCORED | 18.9.44.1 | PATCH | L1 Ensure Block all consumer Microsoft account user authentication is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\MicrosoftAccount
+    name: DisableUserAuth
+    data: 1
+    type: dword
+  when: rule_18_9_44_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.44.1
+    - patch
 
-# - name: "SCORED | 18.9.52.1 | PATCH | L1 Ensure Prevent the usage of OneDrive for file storage is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Onedrive
-#     name: DisableFileSyncNGSC
-#     data: 1
-#     type: dword
-#   when: rule_18_9_52_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.52.1
-#     - patch
+- name: "SCORED | 18.9.52.1 | PATCH | L1 Ensure Prevent the usage of OneDrive for file storage is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Onedrive
+    name: DisableFileSyncNGSC
+    data: 1
+    type: dword
+  when: rule_18_9_52_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.52.1
+    - patch
 
-# - name: "SCORED | 18.9.59.2.2 | PATCH | L1 Ensure Do not allow passwords to be saved is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: DisablePasswordSaving
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_2_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.2.2
-#     - patch
+- name: "SCORED | 18.9.59.2.2 | PATCH | L1 Ensure Do not allow passwords to be saved is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: DisablePasswordSaving
+    data: 1
+    type: dword
+  when: rule_18_9_59_2_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.2.2
+    - patch
 
-# - name: "SCORED | 18.9.59.3.2.1 | PATCH | L2 Ensure Restrict Remote Desktop Services users to a single Remote Desktop Services session is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fSingleSessionPerUser
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_2_1
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.2.1
-#     - patch
+- name: "SCORED | 18.9.59.3.2.1 | PATCH | L2 Ensure Restrict Remote Desktop Services users to a single Remote Desktop Services session is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fSingleSessionPerUser
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_2_1
+  tags:
+    - level2
+    - rule_18.9.59.3.2.1
+    - patch
 
-# - name: "SCORED | 18.9.59.3.3.1 | PATCH | L2 Ensure Do not allow COM port redirection is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fDisableCcm
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_3_1
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.3.1
-#     - patch
+- name: "SCORED | 18.9.59.3.3.1 | PATCH | L2 Ensure Do not allow COM port redirection is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fDisableCcm
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_3_1
+  tags:
+    - level2
+    - rule_18.9.59.3.3.1
+    - patch
 
-# - name: "SCORED | 18.9.59.3.3.2 | PATCH | L1 Ensure Do not allow drive redirection is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fDisableCdm
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_3_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.3.2
-#     - patch
+- name: "SCORED | 18.9.59.3.3.2 | PATCH | L1 Ensure Do not allow drive redirection is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fDisableCdm
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_3_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.3.2
+    - patch
 
-# - name: "SCORED | 18.9.59.3.3.3 | PATCH | L2 Ensure Do not allow LPT port redirection is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fDisableLPT
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_3_3
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.3.3
-#     - patch
+- name: "SCORED | 18.9.59.3.3.3 | PATCH | L2 Ensure Do not allow LPT port redirection is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fDisableLPT
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_3_3
+  tags:
+    - level2
+    - rule_18.9.59.3.3.3
+    - patch
 
-# - name: "SCORED | 18.9.59.3.3.4 | PATCH | L2 Ensure Do not allow supported Plug and Play device redirection is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fDisablePNPRedir
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_3_4
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.3.4
-#     - patch
+- name: "SCORED | 18.9.59.3.3.4 | PATCH | L2 Ensure Do not allow supported Plug and Play device redirection is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fDisablePNPRedir
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_3_4
+  tags:
+    - level2
+    - rule_18.9.59.3.3.4
+    - patch
 
-# - name: "SCORED | 18.9.59.3.9.1 | PATCH | L1 Ensure Always prompt for password upon connection is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fPromptForPassword
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_9_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.9.1
-#     - patch
+- name: "SCORED | 18.9.59.3.9.1 | PATCH | L1 Ensure Always prompt for password upon connection is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fPromptForPassword
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_9_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.9.1
+    - patch
 
-# - name: "SCORED | 18.9.59.3.9.2 | PATCH | L1 Ensure Require secure RPC communication is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: fEncryptRPCTraffic
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_9_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.9.2
-#     - patch
+- name: "SCORED | 18.9.59.3.9.2 | PATCH | L1 Ensure Require secure RPC communication is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: fEncryptRPCTraffic
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_9_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.9.2
+    - patch
 
-# - name: "SCORED | 18.9.59.3.9.3 | PATCH | L1 Ensure Require use of specific security layer for remote RDP connections is set to Enabled SSL"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: SecurityLayer
-#     data: 2
-#     type: dword
-#   when: rule_18_9_59_3_9_3
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.9.3
-#     - patch
+- name: "SCORED | 18.9.59.3.9.3 | PATCH | L1 Ensure Require use of specific security layer for remote RDP connections is set to Enabled SSL"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: SecurityLayer
+    data: 2
+    type: dword
+  when: rule_18_9_59_3_9_3
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.9.3
+    - patch
 
-# - name: "SCORED | 18.9.59.3.9.4 | PATCH | L1 Ensure Require user authentication for remote connections by using Network Level Authentication is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: UserAuthentication
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_9_4
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.9.4
-#     - patch
+- name: "SCORED | 18.9.59.3.9.4 | PATCH | L1 Ensure Require user authentication for remote connections by using Network Level Authentication is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: UserAuthentication
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_9_4
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.9.4
+    - patch
 
-# - name: "SCORED | 18.9.59.3.9.5 | PATCH | L1 Ensure Set client connection encryption level is set to Enabled High Level"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: MinEncryptionLevel
-#     data: 3
-#     type: dword
-#   when: rule_18_9_59_3_9_5
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.9.5
-#     - patch
+- name: "SCORED | 18.9.59.3.9.5 | PATCH | L1 Ensure Set client connection encryption level is set to Enabled High Level"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: MinEncryptionLevel
+    data: 3
+    type: dword
+  when: rule_18_9_59_3_9_5
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.9.5
+    - patch
 
-# - name: "SCORED | 18.9.59.3.10.1 | PATCH | L2 Ensure Set time limit for active but idle Remote Desktop Services sessions is set to Enabled 15 minutes or less"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: MaxIdleTime
-#     data: 3600000
-#     type: dword
-#   when: rule_18_9_59_3_10_1
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.10.1
-#     - patch
+- name: "SCORED | 18.9.59.3.10.1 | PATCH | L2 Ensure Set time limit for active but idle Remote Desktop Services sessions is set to Enabled 15 minutes or less"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: MaxIdleTime
+    data: 3600000
+    type: dword
+  when: rule_18_9_59_3_10_1
+  tags:
+    - level2
+    - rule_18.9.59.3.10.1
+    - patch
 
-# - name: "SCORED | 18.9.59.3.10.2 | PATCH | L2 Ensure Set time limit for disconnected sessions is set to Enabled 1 minute"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: MaxDisconnectionTime
-#     data: 28800000
-#     type: dword
-#   when: rule_18_9_59_3_10_2
-#   tags:
-#     - level2
-#     - rule_18.9.59.3.10.2
-#     - patch
+- name: "SCORED | 18.9.59.3.10.2 | PATCH | L2 Ensure Set time limit for disconnected sessions is set to Enabled 1 minute"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: MaxDisconnectionTime
+    data: 28800000
+    type: dword
+  when: rule_18_9_59_3_10_2
+  tags:
+    - level2
+    - rule_18.9.59.3.10.2
+    - patch
 
-# - name: "SCORED | 18.9.59.3.11.1 | PATCH | L1 Ensure Do not delete temp folders upon exit is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: DeleteTempDirsOnExit
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_11_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.11.1
-#     - patch
+- name: "SCORED | 18.9.59.3.11.1 | PATCH | L1 Ensure Do not delete temp folders upon exit is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: DeleteTempDirsOnExit
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_11_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.11.1
+    - patch
 
-# - name: "SCORED | 18.9.59.3.11.2 | PATCH | L1 Ensure Do not use temporary folders per session is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
-#     name: PerSessionTempDir
-#     data: 1
-#     type: dword
-#   when: rule_18_9_59_3_11_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.59.3.11.2
-#     - patch
+- name: "SCORED | 18.9.59.3.11.2 | PATCH | L1 Ensure Do not use temporary folders per session is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Nt\Terminal Services
+    name: PerSessionTempDir
+    data: 1
+    type: dword
+  when: rule_18_9_59_3_11_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.59.3.11.2
+    - patch
 
 # - name: "SCORED | 18.9.60.1 | PATCH | L1 Ensure Prevent downloading of enclosures is set to Enabled"
 #   win_regedit:
