--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2500,81 +2500,81 @@
     - rule_18.9.97.2.4
     - patch
 
-# #This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
-# - name: "SCORED | 18.9.98.1 | PATCH | L2 Ensure Allow Remote Shell Access is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service\Winrs
-#     name: AllowRemoteShellAccess
-#     data: 1
-#     type: dword
-#   when:
-#     - rule_18_9_98_1
-#     - not win_skip_for_test
-#   tags:
-#     - level2
-#     - rule_18.9.98.1
-#     - patch
+#This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
+- name: "SCORED | 18.9.98.1 | PATCH | L2 Ensure Allow Remote Shell Access is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service\Winrs
+    name: AllowRemoteShellAccess
+    data: 1
+    type: dword
+  when:
+    - rule_18_9_98_1
+    - not win_skip_for_test
+  tags:
+    - level2
+    - rule_18.9.98.1
+    - patch
 
-# - name: "SCORED | 18.9.99.2.1 | PATCH | L1 Ensure Prevent users from modifying settings is set to Enabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows Defender Security Center\App and Browser protection
-#     name: DisallowExploitProtectionOverride
-#     data: 1
-#     type: dword
-#   when: rule_18_9_99_2_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.99.2.1
-#     - patch
+- name: "SCORED | 18.9.99.2.1 | PATCH | L1 Ensure Prevent users from modifying settings is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows Defender Security Center\App and Browser protection
+    name: DisallowExploitProtectionOverride
+    data: 1
+    type: dword
+  when: rule_18_9_99_2_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.99.2.1
+    - patch
 
-# - name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds"
-#   block:
-#     - name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds | ManagePreviewBuilds"
-#       win_regedit:
-#         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
-#         name: ManagePreviewBuilds
-#         data: 1
-#         type: dword
-#     - name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds | ManagePreviewBuilds"
-#       win_regedit:
-#         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
-#         name: ManagePreviewBuildsPolicyValue
-#         data: 0
-#         type: dword
-#   when: rule_18_9_102_1_1
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.102.1.1
-#     - patch
+- name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds"
+  block:
+    - name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds | ManagePreviewBuilds"
+      win_regedit:
+        path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
+        name: ManagePreviewBuilds
+        data: 1
+        type: dword
+    - name: "SCORED | 18.9.102.1.1 | PATCH | L1 Ensure Manage preview builds is set to Enabled Disable preview builds | ManagePreviewBuilds"
+      win_regedit:
+        path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
+        name: ManagePreviewBuildsPolicyValue
+        data: 0
+        type: dword
+  when: rule_18_9_102_1_1
+  tags:
+    - level1
+    - level2
+    - rule_18.9.102.1.1
+    - patch
 
-# - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days"
-#   block:
-#     - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | DeferFeatureUpdates"
-#       win_regedit:
-#         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
-#         name: DeferFeatureUpdates
-#         data: 1
-#         type: dword
-#     - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | DeferFeatureUpdatesPeriodInDays"
-#       win_regedit:
-#         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
-#         name: DeferFeatureUpdatesPeriodInDays
-#         data: 180
-#         type: dword
-#     - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | BranchReadinessLevel"
-#       win_regedit:
-#         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
-#         name: BranchReadinessLevel
-#         data: 16
-#         type: dword
-#   when: rule_18_9_102_1_2
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.102.1.2
-#     - patch
+- name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days"
+  block:
+    - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | DeferFeatureUpdates"
+      win_regedit:
+        path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
+        name: DeferFeatureUpdates
+        data: 1
+        type: dword
+    - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | DeferFeatureUpdatesPeriodInDays"
+      win_regedit:
+        path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
+        name: DeferFeatureUpdatesPeriodInDays
+        data: 180
+        type: dword
+    - name: "SCORED | 18.9.102.1.2 | PATCH | L1 Ensure Select when Preview Builds and Feature Updates are received is set to Enabled Semi-Annual Channel 180 or more days | BranchReadinessLevel"
+      win_regedit:
+        path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
+        name: BranchReadinessLevel
+        data: 16
+        type: dword
+  when: rule_18_9_102_1_2
+  tags:
+    - level1
+    - level2
+    - rule_18.9.102.1.2
+    - patch
 
 # - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days"
 #   block:
