--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,11 +41,11 @@
   tags:
       - section02
 
-- name: Execute the section 9 tasks
-  import_tasks: section09.yml
-  when: section09_patch | bool
-  tags:
-      - section09
+# - name: Execute the section 9 tasks
+#   import_tasks: section09.yml
+#   when: section09_patch | bool
+#   tags:
+#       - section09
 
 - name: Execute the section 17 tasks
   import_tasks: section17.yml
@@ -58,7 +58,7 @@
   when: section18_patch | bool
   tags:
       - section18
-      
+
 - name: Execute the section 19 tasks
   import_tasks: section19.yml
   when: section19_patch | bool
