--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -221,74 +221,74 @@
     - rule_9.2.8
     - patch
 
-# - name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
-#   win_firewall:
-#     state: enabled
-#     profile: Public
-#   when:
-#     - rule_9_3_1
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.1
-#     - patch
+- name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
+  win_firewall:
+    state: enabled
+    profile: Public
+  when:
+    - rule_9_3_1
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.1
+    - patch
 
-# - name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultInboundAction
-#     data: 1
-#     type: dword
-#   when:
-#     - rule_9_3_2
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.2
-#     - patch
+- name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultInboundAction
+    data: 1
+    type: dword
+  when:
+    - rule_9_3_2
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.2
+    - patch
 
-# - name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultOutboundAction
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_3
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.3
-#     - patch
+- name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultOutboundAction
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_3
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.3
+    - patch
 
-# - name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DisableNotifications
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_4
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.4
-#     - patch
+- name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DisableNotifications
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_4
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.4
+    - patch
 
-# - name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: AllowLocalPolicyMerge
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_5
-#     - not win_skip_for_test
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.5
-#     - patch
+- name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: AllowLocalPolicyMerge
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_5
+    - not win_skip_for_test
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.5
+    - patch
 
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
