--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -221,45 +221,45 @@
     - rule_9.2.8
     - patch
 
-# - name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
-#   win_firewall:
-#     state: enabled
-#     profile: Public
-#   when:
-#     - rule_9_3_1
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.1
-#     - patch
+- name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
+  win_firewall:
+    state: enabled
+    profile: Public
+  when:
+    - rule_9_3_1
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.1
+    - patch
 
-# - name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultInboundAction
-#     data: 1
-#     type: dword
-#   when:
-#     - rule_9_3_2
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.2
-#     - patch
+- name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultInboundAction
+    data: 1
+    type: dword
+  when:
+    - rule_9_3_2
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.2
+    - patch
 
-# - name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultOutboundAction
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_3
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.3
-#     - patch
+- name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultOutboundAction
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_3
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.3
+    - patch
 
 - name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
   win_regedit:
@@ -319,44 +319,44 @@
     - rule_9.3.7
     - patch
 
-- name: "SCORED | 9.3.8 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Size limit (KB)' is set to '16,384 KB or greater'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
-    name: LogFileSize
-    data: '{{ public_firewall_log_size }}'
-    type: dword
-  when:
-    - rule_9_3_8
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.8
-    - patch
+# - name: "SCORED | 9.3.8 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Size limit (KB)' is set to '16,384 KB or greater'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
+#     name: LogFileSize
+#     data: '{{ public_firewall_log_size }}'
+#     type: dword
+#   when:
+#     - rule_9_3_8
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.8
+#     - patch
 
-- name: "SCORED | 9.3.9 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Log dropped packets' is set to 'Yes'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
-    name: LogDroppedPackets
-    data: 1
-    type: dword
-  when:
-    - rule_9_3_9
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.9
-    - patch
+# - name: "SCORED | 9.3.9 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Log dropped packets' is set to 'Yes'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
+#     name: LogDroppedPackets
+#     data: 1
+#     type: dword
+#   when:
+#     - rule_9_3_9
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.9
+#     - patch
 
-- name: "SCORED | 9.3.10 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Log successful connections' is set to 'Yes'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
-    name: LogSuccessfulConnections
-    data: 1
-    type: dword
-  when:
-    - rule_9_3_10
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.10
-    - patch
+# - name: "SCORED | 9.3.10 | PATCH | (L1) Ensure 'Windows Firewall: Public: Logging: Log successful connections' is set to 'Yes'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
+#     name: LogSuccessfulConnections
+#     data: 1
+#     type: dword
+#   when:
+#     - rule_9_3_10
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.10
+#     - patch
