--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -310,3 +310,42 @@
     - rule_19.7.45.2.1
     - patch
 
+- name: Firewall rule to allow SMTP on TCP port 445 in
+  community.windows.win_firewall_rule:
+    name: SMB
+    localport: 445
+    action: allow
+    direction: in
+    protocol: tcp
+    state: present
+    enabled: yes
+
+- name: Firewall rule to allow SMTP on TCP port 135 in
+  community.windows.win_firewall_rule:
+    name: SMTP
+    localport: 135
+    action: allow
+    direction: in
+    protocol: tcp
+    state: present
+    enabled: yes
+
+- name: Firewall rule to allow SMTP on TCP port 445 out
+  community.windows.win_firewall_rule:
+    name: SMB
+    localport: 445
+    action: allow
+    direction: out
+    protocol: tcp
+    state: present
+    enabled: yes
+
+- name: Firewall rule to allow SMTP on TCP port 135 out
+  community.windows.win_firewall_rule:
+    name: SMTP
+    localport: 135
+    action: allow
+    direction: out
+    protocol: tcp
+    state: present
+    enabled: yes
