--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -310,42 +310,14 @@
     - rule_19.7.45.2.1
     - patch
 
-- name: Firewall rule to allow SMTP on TCP port 445 in
-  community.windows.win_firewall_rule:
-    name: SMB
-    localport: 445
-    action: allow
-    direction: in
-    protocol: tcp
-    state: present
-    enabled: yes
-
-- name: Firewall rule to allow SMTP on TCP port 135 in
-  community.windows.win_firewall_rule:
-    name: SMTP
-    localport: 135
-    action: allow
-    direction: in
-    protocol: tcp
-    state: present
-    enabled: yes
-
 - name: Firewall rule to allow SMTP on TCP port 445 out
-  community.windows.win_firewall_rule:
-    name: SMB
-    localport: 445
-    action: allow
-    direction: out
-    protocol: tcp
-    state: present
-    enabled: yes
+  win_shell: netsh advfirewall firewall add rule name="Open Port 445" dir=out action=allow protocol=TCP localport=445
 
-- name: Firewall rule to allow SMTP on TCP port 135 out
-  community.windows.win_firewall_rule:
-    name: SMTP
-    localport: 135
-    action: allow
-    direction: out
-    protocol: tcp
-    state: present
-    enabled: yes
+- name: Firewall rule to allow SMTP on TCP port 139 out
+  win_shell: netsh advfirewall firewall add rule name="Open Port 139" dir=out action=allow protocol=TCP localport=139
+
+- name: Firewall rule to allow SMTP on TCP port 445 in
+  win_shell: netsh advfirewall firewall add rule name="Open Port 445" dir=in action=allow protocol=TCP localport=445
+
+- name: Firewall rule to allow SMTP on TCP port 139 in
+  win_shell: netsh advfirewall firewall add rule name="Open Port 139" dir=in action=allow protocol=TCP localport=139
