--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -39,26 +39,26 @@
 #     - rule_9.1.3
 #     - patch
 
-# - name: "SCORED | 9.1.4 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Settings: Display a notification' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
-#     name: DisableNotifications
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_1_4
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.1.4
-#     - patch
+- name: "SCORED | 9.1.4 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Settings: Display a notification' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
+    name: DisableNotifications
+    data: 0
+    type: dword
+  when:
+    - rule_9_1_4
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.1.4
+    - patch
 
 # title has slashes switched
 - name: "SCORED | 9.1.5 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Logging: Name' is set to '%SystemRoot%/System32/logfiles/firewall/domainfw.log'"
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile\Logging
     name: LogFilePath
-    data: '{{ domain_firewall_log_path }}'
+    data: "{{ domain_firewall_log_path }}"
     type: string
   when:
     - rule_9_1_5
@@ -72,7 +72,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile\Logging
     name: LogFileSize
-    data: '{{ domain_firewall_log_size }}'
+    data: "{{ domain_firewall_log_size }}"
     type: dword
   when:
     - rule_9_1_6
@@ -150,26 +150,26 @@
 #     - rule_9.2.3
 #     - patch
 
-# - name: "SCORED | 9.2.4 | PATCH | (L1) Ensure 'Windows Firewall: Private: Settings: Display a notification' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
-#     name: DisableNotifications
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_2_4
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.2.4
-#     - patch
+- name: "SCORED | 9.2.4 | PATCH | (L1) Ensure 'Windows Firewall: Private: Settings: Display a notification' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
+    name: DisableNotifications
+    data: 0
+    type: dword
+  when:
+    - rule_9_2_4
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.2.4
+    - patch
 
 # title has slashes switched
 - name: "SCORED | 9.2.5 | PATCH | (L1) Ensure 'Windows Firewall: Private: Logging: Name' is set to '%SystemRoot%/System32/logfiles/firewall/privatefw.log'"
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile\Logging
     name: LogFilePath
-    data: '{{ private_firewall_log_path }}'
+    data: "{{ private_firewall_log_path }}"
     type: string
   when:
     - rule_9_2_5
@@ -183,7 +183,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile\Logging
     name: LogFileSize
-    data: '{{ private_firewall_log_size }}'
+    data: "{{ private_firewall_log_size }}"
     type: dword
   when:
     - rule_9_2_6
@@ -221,17 +221,17 @@
     - rule_9.2.8
     - patch
 
-# - name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
-#   win_firewall:
-#     state: enabled
-#     profile: Public
-#   when:
-#     - rule_9_3_1
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.1
-#     - patch
+- name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
+  win_firewall:
+    state: enabled
+    profile: Public
+  when:
+    - rule_9_3_1
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.1
+    - patch
 
 # - name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
 #   win_regedit:
@@ -247,48 +247,48 @@
 #     - rule_9.3.2
 #     - patch
 
-# - name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultOutboundAction
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_3
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.3
-#     - patch
+- name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultOutboundAction
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_3
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.3
+    - patch
 
-# - name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DisableNotifications
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_4
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.4
-#     - patch
+- name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DisableNotifications
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_4
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.4
+    - patch
 
-# - name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: AllowLocalPolicyMerge
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_5
-#     - not win_skip_for_test
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.5
-#     - patch
+- name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: AllowLocalPolicyMerge
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_5
+    - not win_skip_for_test
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.5
+    - patch
 
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
@@ -309,7 +309,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
     name: LogFilePath
-    data: '{{ public_firewall_log_path }}'
+    data: "{{ public_firewall_log_path }}"
     type: string
   when:
     - rule_9_3_7
@@ -323,7 +323,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\Logging
     name: LogFileSize
-    data: '{{ public_firewall_log_size }}'
+    data: "{{ public_firewall_log_size }}"
     type: dword
   when:
     - rule_9_3_8
