--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -325,3 +325,7 @@
 
 - name: Firewall rule to allow SMTP on TCP port 5986 in
   win_shell: netsh advfirewall firewall add rule name="Open Port 139" dir=in action=allow protocol=TCP localport=5986
+
+- name: reboot_windows
+  win_reboot:
+      reboot_timeout: 3600
