--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -1166,8 +1166,8 @@
   win_regedit:
     path: HKLM:\System\Currentcontrolset\Services\Lanmanserver\Parameters
     name: NullSessionPipes
-    state: absent
-    delete_key: no
+    data: ['netlogon', 'samr', 'lsarpc']
+    type: multistring
   when:
     - rule_2_3_10_6
     - ansible_windows_domain_role == "Primary domain controller"
