--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,11 +29,11 @@
 #   tags:
 #       - prelim_tasks
 
-# - name: Execute the section 1 tasks
-#   import_tasks: section01.yml
-#   when: section01_patch | bool
-#   tags:
-#       - section01
+- name: Execute the section 1 tasks
+  import_tasks: section01.yml
+  when: section01_patch | bool
+  tags:
+      - section01
 
 - name: Execute the section 2 tasks
   import_tasks: section02.yml
